fixed padding on small screens

--- a/period5/css/main.css
+++ b/period5/css/main.css
@@ -98,6 +98,7 @@ img {
 		margin-left: 2%;
 		padding-left: 0;
 		margin-right: 2%;
+		padding-top: 10px;
 	}
 }
 
